opencvdep = dependency('opencv4')

sources_stb = files(
  'stb.cpp',
  )

sources_stegano = files(
  'image.cpp',
  'message.cpp',
  'stegano.cpp',
  'utils.cpp',
  'jsteg_image.cpp',
  'jsteg.cpp'
  )

lsbr = files(
  'lsbr.cpp',
  )

lsbm = files(
  'lsbm.cpp',
  )

jsteg_main = files(
  'jsteg_main.cpp',
  )

reader = files(
  'reader.cpp',
  )
