opencvdep = dependency('opencv4')

sources_stb = files(
  'stb.cpp',
  )

sources_stegano = files(
  'image.cpp',
  'message.cpp',
  'stegano.cpp',
  'utils.cpp',
  'jsteg_image.cpp',
  'jsteg.cpp'
  )

lsbr = files(
  'lsbr.cpp',
  )

lsbm = files(
  'lsbm.cpp',
  )

jsteg_lsbr = files(
  'jsteg_lsbr.cpp',
  )

jsteg_lsbm = files(
  'jsteg_lsbm.cpp',
  )

reader = files(
  'reader.cpp',
  )
